# cancer-automated

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  releases.md  requirements.txt  ruff.toml
papers/VVUQ-02/codegen/: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint  CROSS_REFERENCES.md  LICENSE.txt  README.md  docker-compose.yml  lint_verification.md  output-codegen.md  prompt-codegen.md  pyproject.toml
papers/VVUQ-02/codegen/config/: anastomosis_targets.yaml  autonomy_plan.yaml  balance_model.yaml  h2_kinematics.yaml  hand_model.yaml  perception_model.yaml  project.yaml  safety_zones.yaml  shared_or_actors.yaml  standards_map.yaml  vvuq_thresholds.yaml
papers/VVUQ-02/codegen/data/: human_surgeon_baseline.csv  sample_h2_sensor.csv  sample_h2_sensor.jsonl
papers/VVUQ-02/codegen/data/iterations/: index.jsonl  run_00000_L0_raw.zenodo_pointer.json  run_00000_events.csv  run_00000_vvuq.csv
papers/VVUQ-02/codegen/data/reference/: README.md  (+11 more)
papers/VVUQ-02/codegen/docs/: architecture.md  autonomy_policy_spec.md  ci_compliance_checklist.md  file_size_pyramid.md  h2_hand_kinematics.md  h2_robot_specification.md  perception_stack_spec.md  runtime_environments.md  sensor_spec.md  shared_or_safety_protocol.md  standards_map.md  suturing_anastomosis_protocol.md  vvuq_gate_spec.md  vvuq_methodology.md
papers/VVUQ-02/codegen/notebooks/: balance_analysis.ipynb  perception_analysis.ipynb  vvuq_analysis.ipynb
papers/VVUQ-02/codegen/outputs/: README.md
papers/VVUQ-02/codegen/prompts/: autonomy_intent_prompt.md  comparison_prompt.md
papers/VVUQ-02/codegen/results/: comparison.json  comparison_report.md  vvuq_decisions.json
papers/VVUQ-02/codegen/schemas/: h2_command.proto  h2_command.schema.json  h2_sensor_record.avsc  h2_sensor_record.proto  h2_sensor_record.schema.json  metrics.schema.json  vvuq_case.schema.json  vvuq_decision.schema.json
papers/VVUQ-02/codegen/src/: __init__.py
papers/VVUQ-02/codegen/tests/: __init__.py  conftest.py  test_autonomy.py  test_balance.py  test_hands.py  test_kinematics.py  test_llm.py  test_metrics.py  test_perception.py  test_safety.py  test_sensors.py  test_simulation.py  test_standards_corpus.py  test_suturing.py  test_vvuq_framework.py  test_vvuq_gates.py  test_zenodo.py
papers/VVUQ-02/codegen/viz/: balance_zmp_support_polygon.txt  ten_vvuq_gate_funnel.txt  vessel_no_fly_heatmap.txt
(+579 files in other folders)
